feat: create first successfull subscription

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql-8-project.groupbwt.com
 DB_PORT=3306
-DB_DATABASE=iv-11
+DB_DATABASE=iv-12
 DB_USERNAME=
 DB_PASSWORD=
 
@@ -81,4 +81,13 @@ TIMEZONE_DIFF_SECONDS=7200
 
 NOVA_GOOGLE_MAPS_API_KEY=
 
-#task11
+STRIPE_KEY=
+STRIPE_SECRET=
+STANDART_PRICE_ID="price_1MAFZrDwe4T4ww0DBQya67GG"
+SILVER_PRICE_ID="price_1MAFZrDwe4T4ww0DwponSO1C"
+GOLDEN_PRICE_ID="price_1MAFZsDwe4T4ww0DmFxJGXPm"
+PLATINUM_PRICE_ID="price_1MAFZsDwe4T4ww0DUw70YV8Y"
+
+CASHIER_CURRENCY=usd
+
+#task12
